--- a/style.css
+++ b/style.css
@@ -1,18 +1,97 @@
 body {
-
+    margin: 0 auto;
+    width: 1400px;
 }
 
 header {
     font-family: "IBM Plex Mono", monospace;
     font-style: normal;
 }
-    font-family: IBM Plex Mono;
-main {
 
+main {
+    font-family: "IBM Plex Mono", monospace;
+    font-style: normal;
 }
 
 footer {
     font-family: "Manrope", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+.face {
+    position: relative;
+    background-image: url(/resources/Photo.png);
+    width: 1400px;
+    height: 765px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    background: linear-gradient(180.00deg);
+}
+
+.face__logo {
+    position: absolute;
+    top: 36px;
+    left: 123px;
+    width: 130px;
+    height: 39px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100px;
+}
+
+.face__surname {
+    position: absolute;
+    top: 27px;
+    left: 132px;
+    width: 109px;
+    font-size: 42.41px;
+    font-weight: 700;
+    line-height: 55px;
+    letter-spacing: -0.11em;
+    color: rgb(27, 255, 7);
+}
+
+.face__p {
+    position: absolute;
+    bottom: 328px;
+    left: 125px;
+    width: 470px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0.03em;
+    color: rgb(255, 255, 255);
+}
+
+.face__h1 {
+    position: absolute;
+    bottom: 94px;
+    left: 119px;
+    width: 1050px;
+    font-size: 80px;
+    font-weight: 400;
+    line-height: 70px;
+    letter-spacing: 0.03em;
+    color: rgb(27, 255, 7);
+}
+
+.navigation {
+    position: absolute;
+    top: 29px;
+    right: 124px;
+    vertical-align: top;
+    display: inline-block;
+    float: right;
+}
+
+.navigation__link {
+    margin-left: 50px;
+    display: inline-block;
+    height: 23px;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
