--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0 auto;
     width: 1400px;
+    background-color: rgb(0, 0, 0);
 }
 
 header {
@@ -9,6 +10,7 @@ header {
 }
 
 main {
+    background-color: rgb(0, 0, 0);
     font-family: "IBM Plex Mono", monospace;
     font-style: normal;
 }
@@ -64,7 +66,7 @@ footer {
     color: rgb(255, 255, 255);
 }
 
-.face__h1 {
+.face__headings {
     position: absolute;
     bottom: 94px;
     left: 119px;
@@ -82,7 +84,7 @@ footer {
     right: 124px;
     vertical-align: top;
     display: inline-block;
-    float: right;
+    
 }
 
 .navigation__link {
@@ -94,4 +96,140 @@ footer {
     text-align: center;
     text-decoration: none;
     color: rgb(255, 255, 255);
+}
+
+.navigation__link:hover {
+    color: rgb(27, 255, 7);
+}
+
+.headings__2 {
+    padding-top: 150px;
+    padding-bottom: 40px;
+    padding-left: 120px;
+    width: 1048px;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 72px;
+    letter-spacing: -0.03em;
+    color: rgb(255, 255, 255);
+}
+
+.projects__realhome {
+    position: relative;
+    margin: 0 auto;
+    background-image: url(/resources/realhome.png);
+    width: 1150px;
+    height: 550px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 30px;
+    background: linear-gradient(180.00deg, rgba(0, 0, 0, 0.9));
+}
+
+.projects__h3 {
+    position: absolute;
+    bottom: 94px;
+    left: 50px;
+    width: 401px;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 46px;
+    letter-spacing: -0.03em;
+    color: rgb(255, 255, 255);
+}
+
+.projects__p {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    width: 506px;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 39px;
+    letter-spacing: -0.03em;
+    color: rgb(255, 255, 255);
+}
+
+.projects__glass {
+    position: relative;
+    margin: 0 auto;
+    background-image: url(/resources/glass.png);
+    width: 1150px;
+    height: 550px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 30px;
+    background: linear-gradient(180.00deg, rgba(0, 0, 0, 0.9));
+}
+
+.projects__fesiyen {
+    position: relative;
+    margin: 0 auto;
+    background-image: url(/resources/fesiyen.png);
+    width: 1150px;
+    height: 550px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 30px;
+    background: linear-gradient(180.00deg, rgba(0, 0, 0, 0.9));
+}
+
+
+.projects__all {
+    margin-top: 80px;
+    margin-left: 127px;
+    display: block;
+    width: 582px;
+    height: 153px;
+    border: 1px solid rgb(27, 255, 7);
+    border-radius: 4.67px;
+    background-color: rgb(27, 255, 7);
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 153px;
+    letter-spacing: -0.03em;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+
+.projects__all:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(27, 255, 7);
+}
+
+.my__competencie__img {
+    padding-top: 60px;
+    padding-left: 127px;
+}
+
+.my__competencie__h4 {
+    padding-top: 12px;
+    padding-left: 125px;
+    width: 1048px;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 46px;
+    letter-spacing: -0.03em;
+    color: rgb(27, 255, 7);
+}
+
+.my__competencie__p {
+    padding-top: 15px;
+    padding-left: 125px;
+    width: 920px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: -0.03em;
+    color: rgb(255, 255, 255);
+}
+.html {
+    padding-top: 8px;
+}
+
+.tascs__h2 {
+    width: 550px;
+    font-size: 35px;
+    line-height: 46px;
 }
