--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    margin: 0 auto;
-    width: 1400px;
     background-color: rgb(0, 0, 0);
 }
 
@@ -21,10 +23,21 @@ footer {
     font-style: normal;
 }
 
+.project,
+.competencies,
+.tascs,
+.contacts,
+.footer {
+    width: 1400px;
+    margin: 0 auto;
+}
+
+
 .face {
+    margin: 0;
     position: relative;
     background-image: url(/resources/Photo.png);
-    width: 1400px;
+    width: 100%;
     height: 765px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -105,7 +118,7 @@ footer {
 .headings__2 {
     padding-top: 150px;
     padding-bottom: 40px;
-    padding-left: 120px;
+    padding-left: 125px;
     width: 1048px;
     font-size: 55px;
     font-weight: 400;
@@ -177,12 +190,12 @@ footer {
 
 .projects__all {
     margin-top: 80px;
-    margin-left: 127px;
+    margin-left: 120px;
     display: block;
     width: 582px;
     height: 153px;
     border: 1px solid rgb(27, 255, 7);
-    border-radius: 4.67px;
+    border-radius: 10px;
     background-color: rgb(27, 255, 7);
     text-align: center;
     font-size: 30px;
@@ -229,7 +242,148 @@ footer {
 }
 
 .tascs__h2 {
+    padding-bottom: 0px;
     width: 550px;
     font-size: 35px;
     line-height: 46px;
+}
+
+.tascs__img {
+    margin: 0 auto;
+    margin-top: 74px;
+    margin-left: 125px;
+}
+
+.tascs__contein {
+    margin-left: 125px;
+    width: 1150px;
+    height: 283px;
+    background-color: rgb(25, 28, 25);
+    border-radius: 30px;
+}
+
+.heading__5 {
+    padding-top: 40px;
+    padding-left: 40px;
+    width: 1048px;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 72px;
+    letter-spacing: -0.03em;
+    color: rgb(27, 255, 7);
+}
+
+.tascs__p {
+    padding-top: 15px;
+    padding-left: 40px;
+    width: 749px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: -0.03em;
+    color: rgb(255, 255, 255);
+}
+
+.interface {
+    padding-top: 60px;
+}
+
+.contacts__contein {
+    margin-top: 150px;
+    position: relative;
+    width: 1400px;
+    height: 717px;
+    border-radius: 30px;
+    overflow: hidden;
+    background-color: rgb(25, 28, 25);
+}
+
+.contacts__heading {
+    position: absolute;
+    bottom: 332px;
+    left: 126px;
+    width: 201px;
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 60px;
+    letter-spacing: -0.03em;
+    color: rgb(255, 255, 255);
+}
+
+.contacts__link {
+    position: absolute;
+    left: 126px;
+    width: 310px;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 60px;
+    letter-spacing: -0.03em;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+.contacts__link:hover {
+    color: rgb(27, 255, 7);
+}
+
+.contacts__img {
+    margin-left: 674px;
+    width: 915px;
+    height: 730px;
+}
+
+.inst {
+    position: absolute;
+    bottom: 244px;
+}
+
+.tg {
+    position: absolute;
+    bottom: 164px;
+}
+
+.mail {
+    position: absolute;
+    bottom: 84px;
+}
+
+.footer {
+    margin-top: 150px;
+    position: relative;
+    width: 1400px;
+    height: 289px;
+    background-color: rgb(0, 0, 0);
+}
+
+.footer__block {
+    width: 1400px;
+    height: 223px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    background-color: rgb(255, 255, 255);
+}
+
+.portfolio {
+    position: absolute;
+    top: 76px;
+    left: 125px;
+    width: 512px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: -0.03em;
+    color: rgb(0, 0, 0);
+}
+
+.rights {
+    position: absolute;
+    bottom: 90px;
+    left: 125px;
+    width: 241px;
+    opacity: 0.5;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    color: rgb(0, 0, 0);
 }
